# SATNet

./: .gitignore  README.md  README.md~  configs.py
Semantic_Scene_Completion/NYU/: SATNet_Depth.py  SATNet_RGB.py  SATNet_SeeNetFuse.py  SATNet_ThinkNetFuse.py  engine.py  engine_depth.py  engine_fuse.py  engine_fuse1.py  gen_result_Depth.py  gen_result_RGB.py  gen_result_SeeNetFuse.py  gen_result_ThinkNetFuse.py  train_Depth.sh  train_RGB.sh  train_SeeNetFuse.sh  train_ThinkNetFuse.sh
Semantic_Scene_Completion/SUNCG_D/: SATNet_Depth.py  engine_depth.py  gen_result_depth.py  train_Depth.sh
Semantic_Scene_Completion/SUNCG_RGBD/: IOU.py  SATNet_Depth.py  SATNet_RGB.py  SATNet_SeeNetFuse.py  SATNet_ThinkNetFuse.py  engine.py  engine_fuse.py  engine_fuse1.py  eval_results.py  gen_result_Depth.py  gen_result_RGB.py  gen_result_SeeNetFuse.py  gen_result_ThinkNetFuse.py  train_SeeNetFuse.sh
Semantic_Segmentation/: IOU.py  engine.py  engine_fuse.py  seg_RGB_nyu.py  seg_RGB_suncg.py  seg_depth_nyu.py  seg_depth_suncg.py  seg_fuse_nyu.py  seg_fuse_suncg.py  train_seg_RGB_nyu.sh  train_seg_RGB_suncg.sh  train_seg_depth_nyu.sh  train_seg_depth_suncg.sh  train_seg_fuse_nyu.sh  train_seg_fuse_suncg.sh
util/pre-get_training_data/: CMakeLists.txt  datautil.cpp  datautil.cu  nyu.py  preget.py  preget_for_myselect_multiprocess.py  preget_for_nyu.py  preget_for_nyu_multiprocess.py  preget_for_shurans.py  preget_for_shurans_multiprocess.py  preget_for_shurans_multiprocess.py~  reprojection.py  setup_datautil.py  test.sh
